{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 90,
  "lineage": "614ab9a2-474e-14a0-dc61-626a55aa7935",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vault-server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04763b3055de4860b",
            "arn": "arn:aws:ec2:us-east-1:753646501470:instance/i-04b7b141b94a2ffca",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-04b7b141b94a2ffca",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "skratsch-workshop-719c191c-20191015153249801900000001",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f079ef9e20a3b5f3",
            "private_dns": "ip-10-0-10-104.ec2.internal",
            "private_ip": "10.0.10.104",
            "public_ip": "3.228.217.154",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-0465da34d773a79e4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01fd3224e8fef78ff",
            "tags": {
              "Name": "skratsch-tf-workshop",
              "TTL": "72",
              "owner": "team-se@hashicorp.com"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b42a3469258837bc"
            ]
          },
          "depends_on": [
            "aws_db_instance.vault-demo",
            "aws_security_group.vault-sg",
            "aws_subnet.subnet",
            "data.aws_ami.ubuntu",
            "module.ssh-keypair-aws"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-081c69045ae2a9563",
            "owner_id": "753646501470",
            "vpc_id": "vpc-0042869f7fc16a9f6"
          },
          "depends_on": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06b862bc61f6dc684",
            "owner_id": "753646501470",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-081c69045ae2a9563",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0042869f7fc16a9f6"
          },
          "depends_on": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042b43ad127a7aed1",
            "route_table_id": "rtb-06b862bc61f6dc684",
            "subnet_id": "subnet-01fd3224e8fef78ff"
          },
          "depends_on": [
            "aws_route_table.main-public",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql-workshop-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753646501470:security-group/sg-06d0ddea0329424dd",
            "description": "Mysql Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d0ddea0329424dd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "skratsch-mysql-sg",
            "name_prefix": null,
            "owner_id": "753646501470",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0042869f7fc16a9f6"
          },
          "depends_on": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vault-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753646501470:security-group/sg-0b42a3469258837bc",
            "description": "Vault Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b42a3469258837bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8200
              }
            ],
            "name": "skratsch-sg",
            "name_prefix": null,
            "owner_id": "753646501470",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0042869f7fc16a9f6"
          },
          "depends_on": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753646501470:subnet/subnet-01fd3224e8fef78ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-01fd3224e8fef78ff",
            "map_public_ip_on_launch": false,
            "owner_id": "753646501470",
            "tags": {
              "Name": "skratsch-workshop-subnet"
            },
            "vpc_id": "vpc-0042869f7fc16a9f6"
          },
          "depends_on": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753646501470:subnet/subnet-0e73b6de5ee5f8180",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0e73b6de5ee5f8180",
            "map_public_ip_on_launch": false,
            "owner_id": "753646501470",
            "tags": {
              "Name": "skratsch-workshop-subnet"
            },
            "vpc_id": "vpc-0042869f7fc16a9f6"
          },
          "depends_on": [
            "aws_vpc.workshop"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "workshop",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753646501470:vpc/vpc-0042869f7fc16a9f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07c7d09cc4a60fff6",
            "default_route_table_id": "rtb-0b6bf2b15fb46e34e",
            "default_security_group_id": "sg-096f69f46a9f761dd",
            "dhcp_options_id": "dopt-1948b062",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0042869f7fc16a9f6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b6bf2b15fb46e34e",
            "owner_id": "753646501470",
            "tags": {
              "Name": "skratsch-workshop",
              "environment": "Production"
            }
          }
        }
      ]
    }
  ]
}